--- a/css/strapped.css
+++ b/css/strapped.css
@@ -42,7 +42,7 @@ span.imgMe {
   border-radius: 50%;
 }
 .btn.btn-warning::before {
-  content:"info@navebinario.com";
+  content:"otharwa@navebinario.com";
 }
 img.logo1 { 
   background-color: white;
@@ -53,7 +53,7 @@ img.logo0 {
   width: 120px;
 }
 img.logo2 { 
-  width: 65px;
+    height: 100%;
 }
 .benefit-ball img{
   width: 100px;
