--- a/css/navebinario.css
+++ b/css/navebinario.css
@@ -32,7 +32,6 @@ body, h1, h2, h3, h4, h5, h6, .h1 {
   font-family: "OpenSans sans", helvetica, sans-serif;
 }
 
-/*otharwa mod*/
 span.imgMe {
   display: inline-block;
   background-image: url('../whoami.jpg');
@@ -61,21 +60,21 @@ img.logo2 {
 html body .benefit .benefit-ball.transparent { 
   background: transparent; 
 }
-.jumbotron div.social {
+.binario div.social {
   padding-left: 96px;
 }
-.jumbotron div.social > * { 
+.binario div.social > * { 
   display: inline-block; 
   line-height: 0;
   padding: 6px;
 }
-.jumbotron div a img,
-.jumbotron div span img { 
+.binario div a img,
+.binario div span img { 
   height: 60px; 
   width: auto;
   display: inline-block;
 }
-.jumbotron div span a {
+.binario div span a {
   display: inline;
   margin: 0;
   padding: 0;
@@ -97,7 +96,7 @@ html body .benefit .benefit-ball.transparent {
   color: #fff;
   font-family: "OpenSans serif", georgia, serif;
   font-weight: bold;
-  padding: 5px 5px; /*mod*/
+  padding: 5px 5px;
 }
 .navbar ul.nav li a {
   color: #fff;
@@ -124,44 +123,44 @@ html body .benefit .benefit-ball.transparent {
 #bitcoin img {
   display: block;
 }
-.jumbotron {
+.binario {
   background: url(../img/noisy_net.png);
   color: #fff;
   padding: 5.5em 0 6em;
   text-align: center;
 }
-.jumbotron h1,
-.jumbotron .h1 {
+.binario h1,
+.binario .h1 {
   font-family: "OpenSans serif", georgia, serif;
   font-weight: bold;
   text-shadow: 1px 1px 3px #000;
 }
-.jumbotron .h1 { 
+.binario .h1 { 
   font-size: 2.2em;
 }
-.jumbotron h1 { 
+.binario h1 { 
   font-size: 2em;
   margin-bottom: 0.9em;
 }
-.jumbotron h2,
-.jumbotron .h2 {
+.binario h2,
+.binario .h2 {
   font-size: 1.7em;
   font-style: italic;
   font-weight: normal;
   line-height: 1.4em;
   margin-bottom: 1em;
 }
-.jumbotron h2 {
+.binario h2 {
   margin-top: 3.3em;
 }
-.jumbotron .btn {
+.binario .btn {
   box-shadow: 1px 1px 3px #000;
   font-size: 1.2em;
   font-weight: bold;
   padding: 0.3em 2.5em 0.5em;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
-.jumbotron .btn .glyphicon {
+.binario .btn .glyphicon {
   margin-left: 0.2em;
   position: relative;
   top: 3px;
@@ -230,7 +229,7 @@ footer {
   .navbar ul.nav li button {
     margin: 1em 0;
   }
-  .jumbotron {
+  .binario {
     font-size: 17px;
     padding: 6em 0 4em;
   }
@@ -242,7 +241,7 @@ footer {
   body {
     font-size: 13px;
   }
-  .jumbotron {
+  .binario {
     font-size: 13px;
   }
   footer .pull-right {
