Preparando el Trabajo para la entrega...

--- a/css/navebinario.css
+++ b/css/navebinario.css
@@ -41,7 +41,7 @@ span.imgMe {
   border-radius: 50%;
 }
 .btn.btn-warning::before {
-  content:"otharwa@navebinario.com";
+  content:"sebastianarca@gmail.com";
 }
 img.logo1 { 
   background-color: white;
@@ -237,7 +237,8 @@ footer {
 }
 
 /***
-# See AUTHORS for a list of contributors
+# Autor: Sebastian Arca <sebastianarca@gmail.com>
+# DNI:; 36724020
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
