update para mergear a master, con otras cosas cosas mas

--- a/css/navebinario.css
+++ b/css/navebinario.css
@@ -41,7 +41,7 @@ span.imgMe {
   border-radius: 50%;
 }
 .btn.btn-warning::before {
-  content:"sebastianarca@gmail.com";
+  content:"otharwa@navebinario.com";
 }
 img.logo1 { 
   background-color: white;
